<resources>
    <string name="app_name">Beer App</string>
    <string name="beer_Catalog_item_string">Beer Catalog</string>
    <string name="drink_sessions_item_string">Drink Sessions</string>
    <string name="tasted_beers_item_string">Tasted Beers</string>
    <string name="settings_item_string">Settings</string>
    <string name="search_title_string">Search</string>

   <!-- Strings for activity_beer -->
    <string name="beer_name">Beer Name</string>
    <string name="beer_manufacturer">Manufacturer: </string>
    <string name="beer_country">Country: </string>
    <string name="beer_abv">Alc By Volume: </string>
    <string name="beer_type">Type: </string>
    <string name="add_tasted">Add beer to tasted</string>
    <string name="remove_tasted">Remove beer from tasted</string>
    <string name="beer_image_caption">Beer Image</string>


    <!-- Strings for fragment_drink_sessions -->
    <string name="user_stats">User Stats</string>
    <string name="different_beers_tasted">Different beers tasted:</string>
    <string name="total_beer_consumed">Total beer consumed:</string>
    <string name="total_time_spent_drinking">Total time spent drinking:</string>
    <string name="most_beer_consumed_in_a_session">Most beer consumed in a session:</string>
    <string name="drink_session">Drink Session</string>
    <string name="start_session">START SESSION</string>
    <string name="stop_session">STOP SESSION</string>
    <string name="time_drinking">Time drinking:</string>
    <string name="total_beer_drank_number">Total beer drank:</string>
    <string name="add_a_half_pint">Add a half pint</string>
    <string name="add_a_pint">Add a pint</string>
    <string name="litres_drank_init_text">0 L</string>

    <!-- String used for DrinkSessionsFragment  -->
    <string name="litres_format_string">%.2f L</string>

    <!-- Strings for fragment_settings  -->
    <string name="reset_title">Reset Your Journey</string>
    <string name="reset_text">If you want to restart your beer journey click the button below:</string>
    <string name="reset_button">START OVER</string>
    <string name="reset_stats_text">If you only want to reset your litres consumed and your times click the button below:</string>
    <string name="reset_stats_button">RESET STATS</string>
    <string name="faq_title">FAQ</string>
    <string name="question_purpose_of_app"> What is the purpose of the application?</string>
    <string name="answer_purpose_of_app">The application is made for all the beer lovers who want to explore different beers from all across the globe.</string>
    <string name="second_question">2) How do I start my beer journey?</string>
    <string name="second_answer">Just head to the Drink Session section and when you start drinking beer press the START SESSION button and select the beer you are drinking. When you are done drinking press the STOP SESSION button to save your drinking session.</string>
    <string name="third_question">3) Can I reset my stats?</string>
    <string name="third_answer">If you want to reset only your stats but not your tasted beers count press on the RESET STATS button in Settings section. If you want to start your beer journey from the beginning press on the START OVER button.</string>

    <!-- String for confirmation dialog  -->
    <string name="dialog_title_journey_reset">Start Over</string>
    <string name="dialog_message_journey_reset">You are about to reset all the progress you did so far. That means that the tasted beers list, as well as the total time and litres will be reset 0.</string>
    <string name="dialog_title_stats_reset">Reset Stats</string>
    <string name="dialog_message_stats_reset">You are about to reset your stats. That means that the total time and litres will be reset to 0. This will not reset your tasted beers list.</string>
    <string name="dialog_positive_button_journey">Start Over</string>
    <string name="dialog_positive_button_stats">Reset Stats</string>
    <string name="dialog_negative_button">Cancel</string>

    <!-- String for beer list if it is empty  -->
    <string name="empty_list">No beers in my list to show</string>

    <!-- Strings for activity welcome screen -->
    <string name="welcome_message">Welcome to My Beer Journey</string>
    <string name="enter_name">Please enter your name to start your own journey:</string>
    <string name="name_edit">Name</string>
    <string name="start_journey_button">Start Journey</string>
    <string name="beer_logo_caption">Beer Logo</string>
    <string name="cheers">cheers</string>
</resources>
