<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BeerDetailsActivity">

    <ImageView
        android:id="@+id/beerImageView"
        android:layout_width="108dp"
        android:layout_height="226dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/beer_image_caption"
        app:layout_constraintBottom_toTopOf="@+id/addTastedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beerNameTextView"
        tools:srcCompat="@drawable/ic_local_drink_black_24dp" />

    <TextView
        android:id="@+id/beerNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/beer_name"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/typeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="64dp"
        android:text="@string/beer_type"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/addWantTasteButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/abvTextView" />



    <TextView
        android:id="@+id/manufacturerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/beer_manufacturer"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/countryTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beerNameTextView" />

    <TextView
        android:id="@+id/countryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/beer_country"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/abvTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manufacturerTextView" />

    <TextView
        android:id="@+id/abvTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/beer_abv"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/typeTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countryTextView" />

    <Button
        android:id="@+id/addWantTasteButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/add_want_to_taste"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addTastedButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addTastedButton" />

    <Button
        android:id="@+id/addTastedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/add_tasted"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/addWantTasteButton" />

</androidx.constraintlayout.widget.ConstraintLayout>